crates/zeek-websocket-derive/tests/unhandled-field-type-fail.stderr
error[E0277]: the trait bound `Value: From<Custom>` is not satisfied
 --> tests/unhandled-field-type-fail.rs:5:10
  |
5 | #[derive(ZeekType)]
  |          ^^^^^^^^ the trait `From<Custom>` is not implemented for `Value`
  |
  = help: the following other types implement trait `From<T>`:
            `Value` implements `From<&str>`
            `Value` implements `From<()>`
            `Value` implements `From<Data>`
            `Value` implements `From<HashMap<K, V>>`
            `Value` implements `From<HashSet<T>>`
            `Value` implements `From<IpAddr>`
            `Value` implements `From<IpNetwork>`
            `Value` implements `From<OffsetDateTime>`
          and $N others
  = note: this error originates in the derive macro `ZeekType` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Custom as TryFrom<Value>>::Error == ConversionError`
 --> tests/unhandled-field-type-fail.rs:5:10
  |
5 | #[derive(ZeekType)]
  |          ^^^^^^^^ expected `ConversionError`, found `Infallible`
  |
  = note: this error originates in the derive macro `ZeekType` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Custom: TryFrom<Value>` is not satisfied
 --> tests/unhandled-field-type-fail.rs:5:10
  |
5 | #[derive(ZeekType)]
  |          ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `From<Value>` is not implemented for `Custom`
 --> tests/unhandled-field-type-fail.rs:3:1
  |
3 | struct Custom;
  | ^^^^^^^^^^^^^
  = note: required for `Value` to implement `Into<Custom>`
  = note: required for `Custom` to implement `TryFrom<Value>`
  = note: required for `Value` to implement `TryInto<Custom>`
  = note: this error originates in the derive macro `ZeekType` (in Nightly builds, run with -Z macro-backtrace for more info)
